# SolAssets-SolanaHackathon

./: .gitignore  README.md  package-lock.json
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  polyfills.ts
frontend/src/components/: DashboardLayout.tsx  file-upload.tsx  rwa-details.tsx  rwa-forms.tsx
frontend/src/components/ui/: background.tsx  button.tsx  sidebar.tsx
frontend/src/hooks/: useHackaProgram.ts
frontend/src/idl/: hacka_program.json  hacka_program.ts
frontend/src/integrations/supabase/: client.ts  rwa.ts  types.ts
frontend/src/lib/: solana.ts
frontend/src/pages/: Auth.tsx  CreateProfile.tsx  Dashboard.tsx  Governance.tsx  Home.tsx  Landing.tsx  Market.tsx  MyDashboard.tsx  Notifications.tsx  RWA.tsx  Settings.tsx  Tokens.tsx
frontend/supabase/: config.toml
program/: package-lock.json  pnpm-lock.yaml
program/programs/program/: Cargo.toml
program/programs/program/src/: lib.rs
program/tests/: program.ts
