[package]
name = "program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"

[target.'cfg(not(target_os = "solana"))'.dependencies]
anchor-spl = { version = "0.32.1", features = ["token", "associated_token", "idl-build"] }

[target.'cfg(target_os = "solana")'.dependencies]
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
